# diana-bot-v2-new

./: .bandit  .bandit.yml  .editorconfig  .env.example  .flake8  .gitignore  .gitignore~  .mcp.json  .pre-commit-config.yaml  .pylintrc  2025-08-12-caveat-the-messages-below-were-generated-by-the-u.txt  =0.19.0  =4.0.0  =6.0.0  CLAUDE.md  DATA_RECONCILIATION_ANALYSIS.md  DEVELOPMENT.md  GAMIFICATION_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ISSUES_FOUND.md  INTEGRATION_QUALITY_ASSESSMENT.md  INTEGRATION_QUALITY_REPORT.md  Makefile  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_AUDIT_REPORT.md  PROGRESS_REPORT.md  README.md  TEST_IMPLEMENTATION_REPORT.md  USERSERVICE_INTEGRATION_VALIDATION_REPORT.md  USERSERVICE_PERFORMANCE_AUDIT_REPORT.md  USERSERVICE_PRODUCTION_READINESS_ASSESSMENT.md  USERSERVICE_TEST_COVERAGE_REPORT.md  USER_SERVICE_INTEGRATION_VALIDATION_REPORT.md  alembic.ini  conftest.py  diana_bot.db  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  (+6 more)
.claude/: settings.json  settings.local.json
.claude/agents/: ai-personalization-engineer.md  architecture-lead.md  foundation-architect.md  gamification-engineer.md  gamification-fresh-start.md  gamification-specialist.md  integration-validator.md  narrative-architect.md  planning-navigator.md  qa-code-guardian.md  telegram-integration-expert.md  test-guardian.md  user-specialist.md
.claude/commands/: implement-micromodule.md  test-integration.md  validate-quality.md
.claude_code/: project_context.json
.git_backup_temp/: pyproject.toml  repo_info.txt  requirements.txt
.system_test/: execution_test.txt
alembic/: env.py
alembic/versions/: 15e491e2767e_initial_migration.py
config/: config.py
docs/: DEVELOPER_GUIDE.md  event_contracts_implementation.md
docs/architecture/: event-bus.md
docs/planning/: 00-Setup.md  01-PRD.md  02-user-stories.md  03-technical-use-cases.md  04-technical-architecture.md  05-testing-qa-plan.md  06-implementation-plan.md  07-risk-management.md  08-executive-summary.md  09-implementation-workflow.md  diana-PRD.md  lucien-PRD.md  narrative-service-ARCH-REVIEW.md  narrative-service-DATA-MODEL.md  narrative-service-IMPLEMENTATION-PLAN.md  narrative-service-NARRATIVE-REVIEW.md  narrative-service-PRD.md  user-service-ARCH-REVIEW.md  user-service-DESIGN-REVIEW.md  user-service-NARRATIVE-REVIEW.md  user-service-PRD-SUMMARY.md  user-service-PRD.md
examples/: event_bus_usage.py
migrations/: env.py
migrations/versions/: 990b6d635503_add_user_profiles_table.py  a632f56a4935_add_gamification_models.py  d933fe2d6b96_create_users_table.py
scripts/: .gitkeep  dev.sh  simple_load_test.py  smart-pre-commit.sh  test.sh
src/: __init__.py  config.py  containers.py  main.py
src/bot/: events.py  main.py
src/core/: __init__.py  container.py  database.py  event_bus.py  events.py  interfaces.py  security.py
src/diana_bot/: __init__.py
src/domain/: events.py  models.py
src/infrastructure/: event_bus.py  repositories.py  (+1 more)
tests/: README_SAFETY_NET.md  SAFETY_NET_DOCUMENTATION.md  __init__.py  conftest.py  integration_example.py  test_critical_integration.py  test_main.py  test_regression_suite.py  test_safety_net.py  test_smoke_tests.py  test_user_service.py  validate_safety_net.py
tests_old_backup_20250831/: __init__.py
(+185 files in other folders)
